munge/tests/ui/rest_patterns_ref_only.stderr
error[E0271]: type mismatch resolving `<MaybeUninit<Struct> as Destructure>::Destructuring == Borrow`
  --> tests/ui/rest_patterns_ref_only.rs:14:28
   |
14 |     munge!(let Struct { a, .. } = mu);
   |     -----------------------^---------
   |     |                      |
   |     |                      expected `Borrow`, found `Move`
   |     required by a bound introduced by this call
   |
note: required by a bound in `only_borrow_destructuring_may_use_rest_patterns`
  --> src/lib.rs
   |
   |     T: Destructure<Destructuring = Borrow>,
   |                    ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `only_borrow_destructuring_may_use_rest_patterns`

error[E0271]: type mismatch resolving `<MaybeUninit<Tuple> as Destructure>::Destructuring == Borrow`
  --> tests/ui/rest_patterns_ref_only.rs:20:25
   |
20 |     munge!(let Tuple(a, ..) = mu);
   |     --------------------^--------
   |     |                   |
   |     |                   expected `Borrow`, found `Move`
   |     required by a bound introduced by this call
   |
note: required by a bound in `only_borrow_destructuring_may_use_rest_patterns`
  --> src/lib.rs
   |
   |     T: Destructure<Destructuring = Borrow>,
   |                    ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `only_borrow_destructuring_may_use_rest_patterns`
